--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
               src="./assets/images/qms_avatar.png"
               alt="profile pic"
               width="200"
-              class="responsive-img"
+              class="responsive-img circle"
             />
-            <span id="aboutMe">
+            <p id="aboutMe">
               Curious, creative, and dedicated Learning Designer with a
               background in economics and exceptional communication skills. A
               strong believer in learning by doing, I've developed my analytical
@@ -47,7 +47,7 @@
               experience in academia and Berlin's startup ecosystem. I'm
               currently taking a full stack web developer boot camp to enhance
               my abilities as a learning designer.
-            </span>
+            </p>
           </div>
         </li>
         <li>
@@ -64,6 +64,9 @@
         </li>
       </ul>
     </div>
+    <footer class="page-footer center">
+      <p>Copyright &copy; 2021 Queen McSteve</p>
+    </footer>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
