add contact info

--- a/index.html
+++ b/index.html
@@ -59,7 +59,32 @@
         <li>
           <div class="collapsible-header">Contact</div>
           <div class="collapsible-body">
-            <span>Lorem ipsum dolor sit amet.</span>
+            <p>
+                <table>
+                    <tr>
+                        <td>Email</td>
+                        <td>
+                            <a href="mailto:queen.mcsteve.666@gmail.com">Click Here</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>GitHub</td>
+                        <td>
+                            <a href="https://github.com/queenmcsteve" target=_blank>github.com/queenmcsteve</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>LinkedIn</td>
+                        <td>
+                            <a href="https://www.linkedin.com/in/niko-de-silva-675858173/" target=_blank>linkedin.com/in/niko-de-silva-675858173/</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>CV</td>
+                        <td>Email Address</td>
+                    </tr>
+                </table>
+            </p>
           </div>
         </li>
       </ul>
