--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                         </div>
                         </div>
                         <div class="card-content">
-                          <p>I am a very simple card. I am good at containing small bits of information.
-                          I am convenient because I require little markup to use effectively.</p>
+                          <p>This is a random user pairing app, created with Olivier Measson. It accepts signups, and then gives the admin the ability to randomly pair users and send out dynamically generated emails to each pair. As this app is still under development for a client, the repo is private.</p>
                         </div>
                         <div class="card-action">
-                          <a href="#">This is a link</a>
+                          <a href="https://github.com/queenmcsteve/latte-lotto/tree/dev" target="_blank">GitHub Repo (PRIVATE)</a>
+                          <a href="https://latte-lotto.herokuapp.com" target="_blank">Deployed App</a>
                         </div>
                       </div>
                     </div>
@@ -83,11 +83,11 @@
                         </div>
                         </div>
                         <div class="card-content">
-                          <p>I am a very simple card. I am good at containing small bits of information.
-                          I am convenient because I require little markup to use effectively.</p>
+                          <p>This is a simple blogging platform that allows account and post creation as well as commenting. Seed data references <a href="https://en.wikipedia.org/wiki/The_Boondocks_(2005_TV_series)" target="_blank">The Boondocks</a></p>
                         </div>
                         <div class="card-action">
-                          <a href="#">This is a link</a>
+                            <a href="https://github.com/queenmcsteve/latte-lotto/tree/dev" target="_blank">GitHub Repo</a>
+                            <a href="https://latte-lotto.herokuapp.com" target="_blank">Deployed App</a>
                         </div>
                       </div>
                     </div>
@@ -104,7 +104,8 @@
                           I am convenient because I require little markup to use effectively.</p>
                         </div>
                         <div class="card-action">
-                          <a href="#">This is a link</a>
+                            <a href="https://github.com/queenmcsteve/latte-lotto/tree/dev" target="_blank">GitHub Repo</a>
+                            <a href="https://latte-lotto.herokuapp.com" target="_blank">Deployed App</a>
                         </div>
                       </div>
                     </div>
