--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Queen McSteve</title>
+    <title>Niko de Silva</title>
     <!-- Compiled and minified CSS -->
     <link
       rel="stylesheet"
@@ -16,7 +16,7 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Queen McSteve</a>
+        <a href="#" class="brand-logo">Niko de Silva</a>
         <!-- <ul id="nav-mobile" class="right">
           <li><a href="#about">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -31,7 +31,7 @@
           <div class="collapsible-body">
             <img
               id="avatar"
-              src="./assets/images/qms_avatar.png"
+              src="./assets/images/avatar.jpg"
               alt="profile pic"
               width="200"
               class="responsive-img circle"
@@ -64,7 +64,7 @@
                         </div>
                         </div>
                         <div class="card-content">
-                          <p>This is a random user pairing app, created with Olivier Measson. It accepts signups, and then gives the admin the ability to randomly pair users and send out dynamically generated emails to each pair. As this app is still under development for a client, the repo is private.</p>
+                          <p>A user matching app, created with Olivier Measson. It accepts signups, and then gives the admin the ability to randomly pair users and send out dynamically generated emails to each pair. As this app is still under development for a client, the repo is private.</p>
                         </div>
                         <div class="card-action">
                           <a href="https://github.com/queenmcsteve/latte-lotto/tree/dev" target="_blank">GitHub Repo (PRIVATE)</a>
@@ -79,15 +79,15 @@
                           <div class="card-image">
                             <div class="card-content">
                             <span class="card-title black-text">Complaints Dept</span>
-                          <img src="assets/images/project-01.jpg">
+                          <img src="assets/images/project-02.jpg">
                         </div>
                         </div>
                         <div class="card-content">
-                          <p>This is a simple blogging platform that allows account and post creation as well as commenting. Seed data references <a href="https://en.wikipedia.org/wiki/The_Boondocks_(2005_TV_series)" target="_blank">The Boondocks</a></p>
+                          <p>A simple blogging platform that allows account and post creation as well as commenting. Seed data references <a href="https://en.wikipedia.org/wiki/The_Boondocks_(2005_TV_series)" target="_blank">The Boondocks</a>.</p>
                         </div>
                         <div class="card-action">
-                            <a href="https://github.com/queenmcsteve/latte-lotto/tree/dev" target="_blank">GitHub Repo</a>
-                            <a href="https://latte-lotto.herokuapp.com" target="_blank">Deployed App</a>
+                            <a href="https://github.com/queenmcsteve/mvc-tech-blog/tree/dev" target="_blank">GitHub Repo</a>
+                            <a href="https://pacific-refuge-98850.herokuapp.com/" target="_blank">Deployed App</a>
                         </div>
                       </div>
                     </div>
@@ -96,16 +96,15 @@
                           <div class="card-image">
                             <div class="card-content">
                             <span class="card-title black-text">Disinfo</span>
-                          <img src="assets/images/project-01.jpg">
+                          <img src="assets/images/project-03.jpg">
                         </div>
                         </div>
                         <div class="card-content">
-                          <p>I am a very simple card. I am good at containing small bits of information.
-                          I am convenient because I require little markup to use effectively.</p>
+                          <p>A small web thingy that generates random words and then uses these to find random YouTube videos. </p>
                         </div>
                         <div class="card-action">
-                            <a href="https://github.com/queenmcsteve/latte-lotto/tree/dev" target="_blank">GitHub Repo</a>
-                            <a href="https://latte-lotto.herokuapp.com" target="_blank">Deployed App</a>
+                            <a href="https://github.com/queenmcsteve/disinfo" target="_blank">GitHub Repo</a>
+                            <a href="https://queenmcsteve.github.io/disinfo/" target="_blank">Deployed App</a>
                         </div>
                       </div>
                     </div>
@@ -149,7 +148,7 @@
       </ul>
     </div>
     <footer class="page-footer center">
-      <p>Copyright &copy; 2021 Queen McSteve</p>
+      <p>Copyright &copy; 2021 Niko de Silva</p>
     </footer>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
