update color profile

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                       <div class="card">
                           <div class="card-image">
                             <div class="card-content">
-                            <span class="card-title black-text">Complaints Dept</span>
+                            <span class="card-title black-text">complaints department</span>
                           <img src="assets/images/project-02.jpg">
                         </div>
                         </div>
@@ -95,12 +95,12 @@
                       <div class="card">
                           <div class="card-image">
                             <div class="card-content">
-                            <span class="card-title black-text">Disinfo</span>
+                            <span class="card-title black-text">DISiNFO</span>
                           <img src="assets/images/project-03.jpg">
                         </div>
                         </div>
                         <div class="card-content">
-                          <p>A small web thingy that generates random words and then uses these to find random YouTube videos. </p>
+                          <p>A small web thingy that generates random words and then uses these to find weird YouTube videos. </p>
                         </div>
                         <div class="card-action">
                             <a href="https://github.com/queenmcsteve/disinfo" target="_blank">GitHub Repo</a>
@@ -139,7 +139,7 @@
                     </tr>
                     <tr>
                         <td>CV</td>
-                        <td>Email Address</td>
+                        <td>[ADD PDF]</td>
                     </tr>
                 </table>
             </p>
