--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </tr>
                     <tr>
                         <td>CV</td>
-                        <td>[ADD PDF]</td>
+                        <td><a href="./assets/files/NdS_CV_January2022.pdf" target="_blank">Click here to download PDF</a></td>
                     </tr>
                 </table>
             </p>
