--- a/index.html
+++ b/index.html
@@ -55,16 +55,20 @@
             <div class="projects" >
                 <div class="row">
                     <div class="col s12 m12">
-                      <div class="card">
+                      <div class="card project1">
+                          <span class="card-title black-text">Latte Lotto</span>
                           <div class="card-image">
                             <div class="card-content">
-                            <span class="card-title black-text">Latte Lotto</span>
-                          <img src="assets/images/project-01.jpg">
+                                <div id="image-wrapper">
+                                    <img class="responsive-img" src="assets/images/project-01.jpg">
+                                    <div class="card-content">
+                                        <p>A user matching app, created with Olivier Measson. It accepts signups, and then gives the admin the ability to randomly pair users and send out dynamically generated emails to each pair. As this app is still under development for a client, the repo is private.</p>
+                                    </div>
+                                 </div>
                         </div>
+                        <br>
                         </div>
-                        <div class="card-content">
-                          <p>A user matching app, created with Olivier Measson. It accepts signups, and then gives the admin the ability to randomly pair users and send out dynamically generated emails to each pair. As this app is still under development for a client, the repo is private.</p>
-                        </div>
+                        <br>
                         <div class="card-action">
                           <a href="https://github.com/queenmcsteve/latte-lotto/tree/dev" target="_blank">GitHub Repo (PRIVATE)</a>
                           <a href="https://latte-lotto.herokuapp.com" target="_blank">Deployed App</a>
@@ -75,9 +79,9 @@
                   <div class="row">
                     <div class="col s12 m6">
                       <div class="card">
+                          <span class="card-title black-text">complaints department</span>
                           <div class="card-image">
                             <div class="card-content">
-                            <span class="card-title black-text">complaints department</span>
                           <img src="assets/images/project-02.jpg">
                         </div>
                         </div>
@@ -92,9 +96,9 @@
                     </div>
                     <div class="col s12 m6">
                       <div class="card">
+                          <span class="card-title black-text">DISiNFO</span>
                           <div class="card-image">
                             <div class="card-content">
-                            <span class="card-title black-text">DISiNFO</span>
                           <img src="assets/images/project-03.jpg">
                         </div>
                         </div>
