--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="bodyFrame" class="flexbox">
       <ul class="collapsible popout" id="collapse">
         <li>
-          <div class="collapsible-header" id="aboutMeHeader">About Me</div>
+          <div class="collapsible-header" id="aboutMeHeader"><h5>About Me</h5></div>
           <div class="collapsible-body">
             <img
               id="avatar"
@@ -50,7 +50,7 @@
           </div>
         </li>
         <li>
-          <div class="collapsible-header" id="projectsHeader">Projects</div>
+          <div class="collapsible-header" id="projectsHeader"><h5 id="projectTitle">Projects</h5></div>
           <div class="collapsible-body">
             <div class="projects" >
                 <div class="row">
@@ -62,7 +62,7 @@
                                 <div id="image-wrapper">
                                     <img class="responsive-img" src="assets/images/project-01.jpg">
                                     <div class="card-content">
-                                        <p>A user matching app, created with Olivier Measson. It accepts signups, and then gives the admin the ability to randomly pair users and send out dynamically generated emails to each pair. As this app is still under development for a client, the repo is private.</p>
+                                        <p id="lattetext">A user matching app, created with Olivier Measson. It accepts signups, and then gives the admin the ability to randomly pair users and send out dynamically generated emails to each pair. As this app is still under development for a client, the repo is private.</p>
                                     </div>
                                  </div>
                         </div>
@@ -118,7 +118,7 @@
           </div>
         </li>
         <li>
-          <div class="collapsible-header" id="contactHeader">Contact</div>
+          <div class="collapsible-header" id="contactHeader"><h5 id="contactTitle">Contact</h5></div>
           <div class="collapsible-body">
             <p>
                 <table>
